syntax = "proto3";

package service;
option go_package = "github.com/zhukowladimir/grpc-mafia/pkg/proto/service";

import "google/protobuf/empty.proto";

service Mafia {
    rpc SetUser(StringRequest) returns (ACK) {}
    rpc GetUsersList(google.protobuf.Empty) returns (UsersListResponse) {}
    rpc ListenNotifications(StringRequest) returns (stream Notification) {}
    rpc Disconnect(StringRequest) returns (google.protobuf.Empty) {}

    rpc StartGame(StringRequest) returns (google.protobuf.Empty) {}
    rpc LynchingVote(VoteRequest) returns (ACK) {}
    rpc GoSleep(StringRequest) returns (google.protobuf.Empty) {}
    rpc NightMurder(VoteRequest) returns (ACK) {}
    rpc SneakPeek(VoteRequest) returns (ACK) {}
}

message StringRequest {
    string msg = 1;
}

message ACK {
    bool ack = 1;
    string msg = 2;
}

message UsersListResponse {
    repeated string list = 1;
}

message Notification {
    string msg = 1;
}

message VoteRequest {
    string from = 1;
    string to = 2;
}
